use apikey.cfg to save API key and secret

--- a/apikey.cfg
+++ b/apikey.cfg
@@ -2,5 +2,6 @@ SERVER = 'http://api.cn.faceplusplus.com/'
 # uncomment the following line to switch to US server
 # SERVER = 'http://api.us.faceplusplus.com/'
 
+# You need to register your App first, and enter you API key/secret.
 API_KEY = '29f7e14333edb39f323093704d82e92a'
 API_SECRET = 'DXjuFA8gpvvzHaMiOSTZzdh1qZqtmNzq'
